--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               border: 1px solid blue;
               padding:15px 100px;
               border-radius:25px;">
-              <button class="btnSubmit" type="submit" value="Submit" style="
+              <button class="buttonPress" id="btnSubmit" type="submit" value="Submit" style="
               margin-left: 20px;
               border:none;
               padding:15px 20px;
@@ -68,7 +68,7 @@
               text-transform:uppercase;
               color: #fff;">
               Personalized Quote</button>
-              <button class="btnRandom" type="submit" value="Submit" style="
+              <button class="buttonPress" id="btnRandom" type="submit" value="Submit" style="
               margin-left: 20px;
               border:none;
               padding:15px 20px;
